--- a/system/commands.yml
+++ b/system/commands.yml
@@ -1,23 +1,14 @@
 commands:
-  - [python active_learning_project/scripts/attack.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack fgsm --targeted True --attack_dir run_example1, 5000]
-  - [python active_learning_project/scripts/attack.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack fgsm --targeted True --attack_dir run_example2, 5000]
-  - [python active_learning_project/scripts/attack.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack fgsm --targeted True --attack_dir run_example3, 5000]
-  - [python active_learning_project/scripts/attack.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack fgsm --targeted True --attack_dir run_example4, 5000]
-  - [python active_learning_project/scripts/attack.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack fgsm --targeted True --attack_dir run_example5, 5000]
-  - [python active_learning_project/scripts/attack.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack fgsm --targeted True --attack_dir run_example6, 5000]
-  - [python active_learning_project/scripts/attack.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack fgsm --targeted True --attack_dir run_example7, 5000]
-  - [python active_learning_project/scripts/attack.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack fgsm --targeted True --attack_dir run_example8, 5000]
-  - [python active_learning_project/scripts/attack.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack fgsm --targeted True --attack_dir run_example9, 5000]
-  - [python active_learning_project/scripts/attack.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack fgsm --targeted True --attack_dir run_example10, 5000]
-  - [python active_learning_project/scripts/attack.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack fgsm --targeted True --attack_dir run_example11, 5000]
-  - [python active_learning_project/scripts/attack.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack fgsm --targeted True --attack_dir run_example12, 5000]
-  - [python active_learning_project/scripts/attack.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack fgsm --targeted True --attack_dir run_example13, 5000]
-  - [python active_learning_project/scripts/attack.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack fgsm --targeted True --attack_dir run_example14, 5000]
-  - [python active_learning_project/scripts/attack.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack fgsm --targeted True --attack_dir run_example15, 5000]
-  - [python active_learning_project/scripts/attack.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack fgsm --targeted True --attack_dir run_example16, 5000]
-  - [python active_learning_project/scripts/attack.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack fgsm --targeted True --attack_dir run_example17, 5000]
-  - [python active_learning_project/scripts/attack.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack fgsm --targeted True --attack_dir run_example18, 5000]
-  - [python active_learning_project/scripts/attack.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack fgsm --targeted True --attack_dir run_example19, 5000]
-  - [python active_learning_project/scripts/attack.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack fgsm --targeted True --attack_dir run_example20, 5000]
-  - [python active_learning_project/scripts/attack.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack fgsm --targeted True --attack_dir run_example21, 5000]
+  - [python active_learning_project/scripts/defend.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack_dir fgsm_targeted --targeted True  --ensemble, 10000]
+  - [python active_learning_project/scripts/defend.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack_dir jsma_targeted --targeted True  --ensemble, 10000]
+  - [python active_learning_project/scripts/defend.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack_dir pgd_targeted  --targeted True  --ensemble, 10000]
+  - [python active_learning_project/scripts/defend.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack_dir cw_targeted   --targeted True  --ensemble, 10000]
+  - [python active_learning_project/scripts/defend.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack_dir deepfool      --targeted False --ensemble, 10000]
+  - [python active_learning_project/scripts/defend.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack_dir ead           --targeted False --ensemble, 10000]
+  - [python active_learning_project/scripts/defend.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack_dir fgsm_targeted --targeted True  --ensemble --rev fgsm --minimal --rev_dir fgsm_minimal, 10000]
+  - [python active_learning_project/scripts/defend.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack_dir jsma_targeted --targeted True  --ensemble --rev fgsm --minimal --rev_dir fgsm_minimal, 10000]
+  - [python active_learning_project/scripts/defend.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack_dir pgd_targeted  --targeted True  --ensemble --rev fgsm --minimal --rev_dir fgsm_minimal, 10000]
+  - [python active_learning_project/scripts/defend.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack_dir cw_targeted   --targeted True  --ensemble --rev fgsm --minimal --rev_dir fgsm_minimal, 10000]
+  - [python active_learning_project/scripts/defend.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack_dir deepfool      --targeted False --ensemble --rev fgsm --minimal --rev_dir fgsm_minimal, 10000]
+  - [python active_learning_project/scripts/defend.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/resnet34_00 --attack_dir ead           --targeted False --ensemble --rev fgsm --minimal --rev_dir fgsm_minimal, 10000]
 
