Adding grads/jacobain/hessian calculation code in utils + add ext classifier for debug + Support softplus activation

--- a/system/commands.yml
+++ b/system/commands.yml
@@ -1,22 +1,21 @@
 commands:
-   - [python active_learning_project/scripts/train_adv.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet101/adv_robust/robust_resnet101_06      --dataset svhn      --lr 0.05  --epochs 300 --factor 0.9 --patience 2 --cooldown 1 --net resnet101, 10000]
-   - [python active_learning_project/scripts/train_adv.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet101/adv_robust/robust_resnet101_07      --dataset svhn      --lr 0.05  --epochs 300 --factor 0.9 --patience 2 --cooldown 1 --net resnet101, 10000]
-   - [python active_learning_project/scripts/train_adv.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet101/adv_robust/robust_resnet101_08      --dataset svhn      --lr 0.05  --epochs 300 --factor 0.9 --patience 2 --cooldown 1 --net resnet101, 10000]
-   - [python active_learning_project/scripts/train_adv.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet101/adv_robust/robust_resnet101_09      --dataset svhn      --lr 0.05  --epochs 300 --factor 0.9 --patience 2 --cooldown 1 --net resnet101, 10000]
-
-
-
-
-#  - [python active_learning_project/scripts/defend.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet34/resnet34_00 --attack_dir fgsm_targeted --targeted True  --ensemble, 10000]
-#  - [python active_learning_project/scripts/defend.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet34/resnet34_00 --attack_dir jsma_targeted --targeted True  --ensemble, 10000]
-#  - [python active_learning_project/scripts/defend.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet34/resnet34_00 --attack_dir pgd_targeted  --targeted True  --ensemble, 10000]
-#  - [python active_learning_project/scripts/defend.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet34/resnet34_00 --attack_dir cw_targeted_conf_0.6   --targeted True  --ensemble, 10000]
-#  - [python active_learning_project/scripts/defend.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet34/resnet34_00 --attack_dir deepfool      --targeted False --ensemble, 10000]
-#  - [python active_learning_project/scripts/defend.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet34/resnet34_00 --attack_dir ead           --targeted False --ensemble, 10000]
-#  - [python active_learning_project/scripts/defend.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet34/resnet34_00 --attack_dir fgsm_targeted --targeted True  --ensemble --rev fgsm --minimal --rev_dir fgsm_minimal, 10000]
-#  - [python active_learning_project/scripts/defend.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet34/resnet34_00 --attack_dir jsma_targeted --targeted True  --ensemble --rev fgsm --minimal --rev_dir fgsm_minimal, 10000]
-#  - [python active_learning_project/scripts/defend.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet34/resnet34_00 --attack_dir pgd_targeted  --targeted True  --ensemble --rev fgsm --minimal --rev_dir fgsm_minimal, 10000]
-#  - [python active_learning_project/scripts/defend.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet34/resnet34_00 --attack_dir cw_targeted_conf_0.6   --targeted True  --ensemble --rev fgsm --minimal --rev_dir fgsm_minimal, 10000]
-#  - [python active_learning_project/scripts/defend.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet34/resnet34_00 --attack_dir deepfool      --targeted False --ensemble --rev fgsm --minimal --rev_dir fgsm_minimal, 10000]
-#  - [python active_learning_project/scripts/defend.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet34/resnet34_00 --attack_dir ead           --targeted False --ensemble --rev fgsm --minimal --rev_dir fgsm_minimal, 10000]
-
+   - [python active_learning_project/scripts/train.py     --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/regular_softplus/resnet34/resnet34_00    --dataset cifar10 --net resnet34 --activation softplus, 11000]
+   - [python active_learning_project/scripts/train_adv.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/adv_robust_softplus/robust_resnet34_00   --dataset cifar10 --net resnet34 --activation softplus --epochs 500, 11000]
+   - [python active_learning_project/scripts/train.py     --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/regular_softplus/resnet34/resnet34_01    --dataset cifar10 --net resnet34 --activation softplus, 11000]
+   - [python active_learning_project/scripts/train.py     --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/regular_softplus/resnet34/resnet34_02    --dataset cifar10 --net resnet34 --activation softplus, 11000]
+   - [python active_learning_project/scripts/train.py     --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/regular_softplus/resnet34/resnet34_03    --dataset cifar10 --net resnet34 --activation softplus, 11000]
+   - [python active_learning_project/scripts/train.py     --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/regular_softplus/resnet34/resnet34_04    --dataset cifar10 --net resnet34 --activation softplus, 11000]
+   - [python active_learning_project/scripts/train.py     --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/regular_softplus/resnet34/resnet34_05    --dataset cifar10 --net resnet34 --activation softplus, 11000]
+   - [python active_learning_project/scripts/train.py     --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/regular_softplus/resnet34/resnet34_06    --dataset cifar10 --net resnet34 --activation softplus, 11000]
+   - [python active_learning_project/scripts/train.py     --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/regular_softplus/resnet34/resnet34_07    --dataset cifar10 --net resnet34 --activation softplus, 11000]
+   - [python active_learning_project/scripts/train.py     --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/regular_softplus/resnet34/resnet34_08    --dataset cifar10 --net resnet34 --activation softplus, 11000]
+   - [python active_learning_project/scripts/train.py     --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/regular_softplus/resnet34/resnet34_09    --dataset cifar10 --net resnet34 --activation softplus, 11000]
+   - [python active_learning_project/scripts/train_adv.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/adv_robust_softplus/robust_resnet34_01   --dataset cifar10 --net resnet34 --activation softplus --epochs 500, 11000]
+   - [python active_learning_project/scripts/train_adv.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/adv_robust_softplus/robust_resnet34_02   --dataset cifar10 --net resnet34 --activation softplus --epochs 500, 11000]
+   - [python active_learning_project/scripts/train_adv.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/adv_robust_softplus/robust_resnet34_03   --dataset cifar10 --net resnet34 --activation softplus --epochs 500, 11000]
+   - [python active_learning_project/scripts/train_adv.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/adv_robust_softplus/robust_resnet34_04   --dataset cifar10 --net resnet34 --activation softplus --epochs 500, 11000]
+   - [python active_learning_project/scripts/train_adv.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/adv_robust_softplus/robust_resnet34_05   --dataset cifar10 --net resnet34 --activation softplus --epochs 500, 11000]
+   - [python active_learning_project/scripts/train_adv.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/adv_robust_softplus/robust_resnet34_06   --dataset cifar10 --net resnet34 --activation softplus --epochs 500, 11000]
+   - [python active_learning_project/scripts/train_adv.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/adv_robust_softplus/robust_resnet34_07   --dataset cifar10 --net resnet34 --activation softplus --epochs 500, 11000]
+   - [python active_learning_project/scripts/train_adv.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/adv_robust_softplus/robust_resnet34_08   --dataset cifar10 --net resnet34 --activation softplus --epochs 500, 11000]
+   - [python active_learning_project/scripts/train_adv.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/adv_robust_softplus/robust_resnet34_09   --dataset cifar10 --net resnet34 --activation softplus --epochs 500, 11000]
