--- a/system/commands.yml
+++ b/system/commands.yml
@@ -1,4 +1,10 @@
 commands:
-   - [python active_learning_project/scripts/defend.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/adv_robust_softplus/robust_resnet34_00 --attack_dir deepfool --rev zga --rev_dir rev_L2_pred/zga_lr_0.01_ic_0.1        --ensemble --subset 500 --rev_lr 0.01 --initial_const 0.1     , 11000]
-   - [python active_learning_project/scripts/defend.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/adv_robust_softplus/robust_resnet34_00 --attack_dir deepfool --rev zga --rev_dir rev_L2_pred/zga_lr_0.001_ic_0.1       --ensemble --subset 500 --rev_lr 0.001 --initial_const 0.1     , 11000]
-   - [python active_learning_project/scripts/defend.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/adv_robust_softplus/robust_resnet34_00 --attack_dir deepfool --rev zga --rev_dir rev_L2_pred/zga_lr_0.0001_ic_0.1      --ensemble --subset 500 --rev_lr 0.0001 --initial_const 0.1     , 11000]
+   - [python active_learning_project/scripts/defend_tta.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/regular/resnet34_00  --attack_dir pgd_targeted, 11000]
+   - [python active_learning_project/scripts/defend_tta.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/regular/resnet34_00  --attack_dir jsma_targeted, 11000]
+   - [python active_learning_project/scripts/defend_tta.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/regular/resnet34_00  --attack_dir ead, 11000]
+   - [python active_learning_project/scripts/defend_tta.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet34/regular/resnet34_00 --attack_dir fgsm_targeted --collect_normal_ball True, 11000]
+   - [python active_learning_project/scripts/defend_tta.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet34/regular/resnet34_00 --attack_dir pgd_targeted, 11000]
+   - [python active_learning_project/scripts/defend_tta.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet34/regular/resnet34_00 --attack_dir deepfool, 11000]
+   - [python active_learning_project/scripts/defend_tta.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet34/regular/resnet34_00 --attack_dir jsma_targeted, 11000]
+   - [python active_learning_project/scripts/defend_tta.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet34/regular/resnet34_00 --attack_dir cw_targeted, 11000]
+   - [python active_learning_project/scripts/defend_tta.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet34/regular/resnet34_00 --attack_dir ead, 11000]
