--- a/system/commands.yml
+++ b/system/commands.yml
@@ -1,5 +1,34 @@
 commands:
-  - [python active_learning_project/scripts/train_byol.py --batch_size 128 --lr 0.1 --mom_mad 0.1 --debug_size 100 --lars_coeff 0.01 --lars_eps 1e-6 -d -dt --dump_dir lars_bs_128_lr_0.1_mom_mad_0.1_lars_coeff_0.01_eps_1e6,  48000]
-  - [python active_learning_project/scripts/train_byol.py --batch_size 128 --lr 1 --mom_mad 0.1 --debug_size 100 --lars_coeff 0.01 --lars_eps 1e-6 -d -dt --dump_dir lars_bs_128_lr_1_mom_mad_0.1_lars_coeff_0.01_eps_1e6,  48000]
-  - [python active_learning_project/scripts/train_byol.py --batch_size 128 --lr 0.1 --mom_mad 0.1 --debug_size 100 --lars_coeff 0.001 --lars_eps 1e-6 -d -dt --dump_dir lars_bs_128_lr_0.1_mom_mad_0.1_lars_coeff_0.001_eps_1e6,  48000]
-  - [python active_learning_project/scripts/train_byol.py --batch_size 128 --lr 0.1 --mom_mad 0.1 --debug_size 100 --lars_coeff 0.01 --lars_eps 1e-6 --lambda_wdiff 100 -d -dt --dump_dir lars_bs_128_lr_0.1_mom_mad_0.1_lars_coeff_0.01_eps_1e6_wdiff_100,  48000]
+  - [python active_learning_project/scripts/train.py --dataset cifar10   --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/regular/resnet50_00, 11000]
+  - [python active_learning_project/scripts/train.py --dataset cifar100  --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/regular/resnet50_00, 11000]
+  - [python active_learning_project/scripts/train.py --dataset svhn      --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/regular/resnet50_00, 11000]
+  - [python active_learning_project/scripts/train_adv.py --dataset cifar10  --net resnet50 --epochs 500 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/adv_robust/robust_resnet50_00, 11000]
+  - [python active_learning_project/scripts/train_adv.py --dataset cifar100 --net resnet50 --epochs 500 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/adv_robust/robust_resnet50_00, 11000]
+  - [python active_learning_project/scripts/train_adv.py --dataset svhn     --net resnet50 --epochs 300 -patience 2 --cooldown 1 --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/adv_robust/robust_resnet50_00, 11000]
+  - [python active_learning_project/scripts/train.py --dataset cifar10   --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/regular/resnet50_01, 11000]
+  - [python active_learning_project/scripts/train.py --dataset cifar10   --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/regular/resnet50_02, 11000]
+  - [python active_learning_project/scripts/train.py --dataset cifar10   --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/regular/resnet50_03, 11000]
+  - [python active_learning_project/scripts/train.py --dataset cifar10   --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/regular/resnet50_04, 11000]
+  - [python active_learning_project/scripts/train.py --dataset cifar10   --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/regular/resnet50_05, 11000]
+  - [python active_learning_project/scripts/train.py --dataset cifar10   --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/regular/resnet50_06, 11000]
+  - [python active_learning_project/scripts/train.py --dataset cifar10   --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/regular/resnet50_07, 11000]
+  - [python active_learning_project/scripts/train.py --dataset cifar10   --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/regular/resnet50_08, 11000]
+  - [python active_learning_project/scripts/train.py --dataset cifar10   --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/regular/resnet50_09, 11000]
+  - [python active_learning_project/scripts/train.py --dataset cifar100  --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/regular/resnet50_01, 11000]
+  - [python active_learning_project/scripts/train.py --dataset cifar100  --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/regular/resnet50_02, 11000]
+  - [python active_learning_project/scripts/train.py --dataset cifar100  --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/regular/resnet50_03, 11000]
+  - [python active_learning_project/scripts/train.py --dataset cifar100  --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/regular/resnet50_04, 11000]
+  - [python active_learning_project/scripts/train.py --dataset cifar100  --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/regular/resnet50_05, 11000]
+  - [python active_learning_project/scripts/train.py --dataset cifar100  --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/regular/resnet50_06, 11000]
+  - [python active_learning_project/scripts/train.py --dataset cifar100  --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/regular/resnet50_07, 11000]
+  - [python active_learning_project/scripts/train.py --dataset cifar100  --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/regular/resnet50_08, 11000]
+  - [python active_learning_project/scripts/train.py --dataset cifar100  --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/regular/resnet50_09, 11000]
+  - [python active_learning_project/scripts/train.py --dataset svhn      --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/regular/resnet50_01, 11000]
+  - [python active_learning_project/scripts/train.py --dataset svhn      --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/regular/resnet50_02, 11000]
+  - [python active_learning_project/scripts/train.py --dataset svhn      --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/regular/resnet50_03, 11000]
+  - [python active_learning_project/scripts/train.py --dataset svhn      --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/regular/resnet50_04, 11000]
+  - [python active_learning_project/scripts/train.py --dataset svhn      --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/regular/resnet50_05, 11000]
+  - [python active_learning_project/scripts/train.py --dataset svhn      --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/regular/resnet50_06, 11000]
+  - [python active_learning_project/scripts/train.py --dataset svhn      --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/regular/resnet50_07, 11000]
+  - [python active_learning_project/scripts/train.py --dataset svhn      --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/regular/resnet50_08, 11000]
+  - [python active_learning_project/scripts/train.py --dataset svhn      --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/regular/resnet50_09, 11000]
