--- a/system/commands.yml
+++ b/system/commands.yml
@@ -1,34 +1,31 @@
 commands:
-  - [python active_learning_project/scripts/train.py --dataset cifar10   --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/regular/resnet50_00, 11000]
-  - [python active_learning_project/scripts/train.py --dataset cifar100  --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/regular/resnet50_00, 11000]
-  - [python active_learning_project/scripts/train.py --dataset svhn      --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/regular/resnet50_00, 11000]
-  - [python active_learning_project/scripts/train_adv.py --dataset cifar10  --net resnet50 --epochs 500 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/adv_robust/robust_resnet50_00, 11000]
-  - [python active_learning_project/scripts/train_adv.py --dataset cifar100 --net resnet50 --epochs 500 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/adv_robust/robust_resnet50_00, 11000]
-  - [python active_learning_project/scripts/train_adv.py --dataset svhn     --net resnet50 --epochs 300 -patience 2 --cooldown 1 --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/adv_robust/robust_resnet50_00, 11000]
-  - [python active_learning_project/scripts/train.py --dataset cifar10   --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/regular/resnet50_01, 11000]
-  - [python active_learning_project/scripts/train.py --dataset cifar10   --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/regular/resnet50_02, 11000]
-  - [python active_learning_project/scripts/train.py --dataset cifar10   --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/regular/resnet50_03, 11000]
-  - [python active_learning_project/scripts/train.py --dataset cifar10   --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/regular/resnet50_04, 11000]
-  - [python active_learning_project/scripts/train.py --dataset cifar10   --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/regular/resnet50_05, 11000]
-  - [python active_learning_project/scripts/train.py --dataset cifar10   --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/regular/resnet50_06, 11000]
-  - [python active_learning_project/scripts/train.py --dataset cifar10   --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/regular/resnet50_07, 11000]
-  - [python active_learning_project/scripts/train.py --dataset cifar10   --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/regular/resnet50_08, 11000]
-  - [python active_learning_project/scripts/train.py --dataset cifar10   --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/regular/resnet50_09, 11000]
-  - [python active_learning_project/scripts/train.py --dataset cifar100  --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/regular/resnet50_01, 11000]
-  - [python active_learning_project/scripts/train.py --dataset cifar100  --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/regular/resnet50_02, 11000]
-  - [python active_learning_project/scripts/train.py --dataset cifar100  --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/regular/resnet50_03, 11000]
-  - [python active_learning_project/scripts/train.py --dataset cifar100  --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/regular/resnet50_04, 11000]
-  - [python active_learning_project/scripts/train.py --dataset cifar100  --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/regular/resnet50_05, 11000]
-  - [python active_learning_project/scripts/train.py --dataset cifar100  --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/regular/resnet50_06, 11000]
-  - [python active_learning_project/scripts/train.py --dataset cifar100  --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/regular/resnet50_07, 11000]
-  - [python active_learning_project/scripts/train.py --dataset cifar100  --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/regular/resnet50_08, 11000]
-  - [python active_learning_project/scripts/train.py --dataset cifar100  --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/regular/resnet50_09, 11000]
-  - [python active_learning_project/scripts/train.py --dataset svhn      --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/regular/resnet50_01, 11000]
-  - [python active_learning_project/scripts/train.py --dataset svhn      --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/regular/resnet50_02, 11000]
-  - [python active_learning_project/scripts/train.py --dataset svhn      --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/regular/resnet50_03, 11000]
-  - [python active_learning_project/scripts/train.py --dataset svhn      --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/regular/resnet50_04, 11000]
-  - [python active_learning_project/scripts/train.py --dataset svhn      --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/regular/resnet50_05, 11000]
-  - [python active_learning_project/scripts/train.py --dataset svhn      --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/regular/resnet50_06, 11000]
-  - [python active_learning_project/scripts/train.py --dataset svhn      --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/regular/resnet50_07, 11000]
-  - [python active_learning_project/scripts/train.py --dataset svhn      --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/regular/resnet50_08, 11000]
-  - [python active_learning_project/scripts/train.py --dataset svhn      --net resnet50 --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/regular/resnet50_09, 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet34 --cls_to_omit airplane   --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet34/wo_airplane_0  , 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet34 --cls_to_omit automobile --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet34/wo_automobile_1, 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet34 --cls_to_omit bird       --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet34/wo_bird_2      , 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet34 --cls_to_omit cat        --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet34/wo_cat_3       , 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet34 --cls_to_omit deer       --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet34/wo_deer_4      , 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet34 --cls_to_omit dog        --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet34/wo_dog_5       , 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet34 --cls_to_omit frog       --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet34/wo_frog_6      , 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet34 --cls_to_omit horse      --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet34/wo_horse_7     , 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet34 --cls_to_omit ship       --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet34/wo_ship_8      , 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet34 --cls_to_omit truck      --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet34/wo_truck_9     , 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet50 --cls_to_omit airplane   --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet50/wo_airplane_0  , 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet50 --cls_to_omit automobile --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet50/wo_automobile_1, 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet50 --cls_to_omit bird       --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet50/wo_bird_2      , 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet50 --cls_to_omit cat        --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet50/wo_cat_3       , 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet50 --cls_to_omit deer       --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet50/wo_deer_4      , 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet50 --cls_to_omit dog        --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet50/wo_dog_5       , 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet50 --cls_to_omit frog       --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet50/wo_frog_6      , 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet50 --cls_to_omit horse      --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet50/wo_horse_7     , 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet50 --cls_to_omit ship       --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet50/wo_ship_8      , 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet50 --cls_to_omit truck      --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet50/wo_truck_9     , 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet101 --cls_to_omit airplane   --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet101/wo_airplane_0  , 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet101 --cls_to_omit automobile --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet101/wo_automobile_1, 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet101 --cls_to_omit bird       --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet101/wo_bird_2      , 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet101 --cls_to_omit cat        --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet101/wo_cat_3       , 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet101 --cls_to_omit deer       --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet101/wo_deer_4      , 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet101 --cls_to_omit dog        --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet101/wo_dog_5       , 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet101 --cls_to_omit frog       --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet101/wo_frog_6      , 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet101 --cls_to_omit horse      --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet101/wo_horse_7     , 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet101 --cls_to_omit ship       --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet101/wo_ship_8      , 11000]
+  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet101 --cls_to_omit truck      --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet101/wo_truck_9     , 11000]
