--- a/system/commands.yml
+++ b/system/commands.yml
@@ -1,31 +1,38 @@
 commands:
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet34 --cls_to_omit airplane   --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet34/wo_airplane_0  , 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet34 --cls_to_omit automobile --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet34/wo_automobile_1, 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet34 --cls_to_omit bird       --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet34/wo_bird_2      , 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet34 --cls_to_omit cat        --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet34/wo_cat_3       , 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet34 --cls_to_omit deer       --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet34/wo_deer_4      , 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet34 --cls_to_omit dog        --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet34/wo_dog_5       , 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet34 --cls_to_omit frog       --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet34/wo_frog_6      , 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet34 --cls_to_omit horse      --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet34/wo_horse_7     , 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet34 --cls_to_omit ship       --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet34/wo_ship_8      , 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet34 --cls_to_omit truck      --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet34/wo_truck_9     , 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet50 --cls_to_omit airplane   --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet50/wo_airplane_0  , 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet50 --cls_to_omit automobile --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet50/wo_automobile_1, 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet50 --cls_to_omit bird       --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet50/wo_bird_2      , 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet50 --cls_to_omit cat        --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet50/wo_cat_3       , 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet50 --cls_to_omit deer       --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet50/wo_deer_4      , 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet50 --cls_to_omit dog        --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet50/wo_dog_5       , 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet50 --cls_to_omit frog       --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet50/wo_frog_6      , 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet50 --cls_to_omit horse      --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet50/wo_horse_7     , 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet50 --cls_to_omit ship       --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet50/wo_ship_8      , 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet50 --cls_to_omit truck      --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet50/wo_truck_9     , 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet101 --cls_to_omit airplane   --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet101/wo_airplane_0  , 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet101 --cls_to_omit automobile --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet101/wo_automobile_1, 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet101 --cls_to_omit bird       --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet101/wo_bird_2      , 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet101 --cls_to_omit cat        --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet101/wo_cat_3       , 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet101 --cls_to_omit deer       --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet101/wo_deer_4      , 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet101 --cls_to_omit dog        --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet101/wo_dog_5       , 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet101 --cls_to_omit frog       --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet101/wo_frog_6      , 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet101 --cls_to_omit horse      --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet101/wo_horse_7     , 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet101 --cls_to_omit ship       --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet101/wo_ship_8      , 11000]
-  - [python active_learning_project/scripts/ood/train_leave_one_out.py --dataset cifar10 --net resnet101 --cls_to_omit truck      --checkpoint /data/gilad/logs/adv_robustness/cifar10/resnet101/wo_truck_9     , 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir ema_decay_0.999 --ema_decay 0.999 --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir ema_decay_0.99 --ema_decay 0.99 --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir ema_decay_0.9 --ema_decay 0.9 --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir ema_decay_0.8 --ema_decay 0.8 --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir ema_decay_0.5 --ema_decay 0.5 --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir mega_steps_10_mini_steps_10_n_power_1 --mega_steps 10 --mini_steps 10 --n_power 1 --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir mega_steps_10_mini_steps_10_n_power_3 --mega_steps 10 --mini_steps 10 --n_power 3 --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir mega_steps_10_mini_steps_20_n_power_1 --mega_steps 10 --mini_steps 20 --n_power 1 --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir mega_steps_10_mini_steps_20_n_power_3 --mega_steps 10 --mini_steps 20 --n_power 3 --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir mega_steps_20_mini_steps_10_n_power_1 --mega_steps 20 --mini_steps 10 --n_power 1 --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir mega_steps_20_mini_steps_10_n_power_3 --mega_steps 20 --mini_steps 10 --n_power 3 --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir mega_steps_20_mini_steps_20_n_power_1 --mega_steps 20 --mini_steps 20 --n_power 1 --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir mega_steps_20_mini_steps_20_n_power_3 --mega_steps 20 --mini_steps 20 --n_power 3 --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lr_0.005 --lr 0.005 --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lr_0.01  --lr 0.01  --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lr_0.05  --lr 0.05  --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lr_0.1   --lr 0.1   --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lr_0.005_adam_b1_0.9 --lr 0.005 --adam_b1 0.9 --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lr_0.01_adam_b1_0.9  --lr 0.01  --adam_b1 0.9 --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lr_0.05_adam_b1_0.9  --lr 0.05  --adam_b1 0.9 --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lr_0.1_adam_b1_0.9   --lr 0.1   --adam_b1 0.9 --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir sgd_mom_0_lr_0.005   --opt sgd --mom 0   --lr 0.005 --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir sgd_mom_0.9_lr_0.005 --opt sgd --mom 0.9 --lr 0.005 --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir sgd_mom_0_lr_0.01    --opt sgd --mom 0   --lr 0.01  --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir sgd_mom_0.9_lr_0.01  --opt sgd --mom 0.9 --lr 0.01  --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir sgd_mom_0_lr_0.05    --opt sgd --mom 0   --lr 0.05  --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir sgd_mom_0.9_lr_0.05  --opt sgd --mom 0.9 --lr 0.05  --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir sgd_mom_0_lr_0.1     --opt sgd --mom 0   --lr 0.1   --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir sgd_mom_0.9_lr_0.1   --opt sgd --mom 0.9 --lr 0.1   --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lambda_cent_0.01_lambda_param_0.01_lambda_vat_0.01 --lamba_cent 0.01 --lambda_param 0.01 --lambda_vat 0.01 --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lambda_cent_0.01_lambda_param_0.01_lambda_vat_0.1 --lamba_cent 0.01 --lambda_param 0.01 --lambda_vat 0.1 --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lambda_cent_0.01_lambda_param_0.1_lambda_vat_0.01 --lamba_cent 0.01 --lambda_param 0.1 --lambda_vat 0.01 --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lambda_cent_0.01_lambda_param_0.1_lambda_vat_0.1 --lamba_cent 0.01 --lambda_param 0.1 --lambda_vat 0.1  --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lambda_cent_0.1_lambda_param_0.01_lambda_vat_0.01 --lamba_cent 0.1 --lambda_param 0.01 --lambda_vat 0.01 --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lambda_cent_0.1_lambda_param_0.01_lambda_vat_0.1 --lamba_cent 0.1 --lambda_param 0.01 --lambda_vat 0.1  --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lambda_cent_0.1_lambda_param_0.1_lambda_vat_0.01 --lamba_cent 0.1 --lambda_param 0.1 --lambda_vat 0.01  --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lambda_cent_0.1_lambda_param_0.1_lambda_vat_0.1 --lamba_cent 0.1 --lambda_param 0.1 --lambda_vat 0.1   --debug_size 20, 11000]
