--- a/system/commands.yml
+++ b/system/commands.yml
@@ -1,38 +1,9 @@
 commands:
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir ema_decay_0.999 --ema_decay 0.999 --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir ema_decay_0.99 --ema_decay 0.99 --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir ema_decay_0.9 --ema_decay 0.9 --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir ema_decay_0.8 --ema_decay 0.8 --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir ema_decay_0.5 --ema_decay 0.5 --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir mega_steps_10_mini_steps_10_n_power_1 --mega_steps 10 --mini_steps 10 --n_power 1 --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir mega_steps_10_mini_steps_10_n_power_3 --mega_steps 10 --mini_steps 10 --n_power 3 --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir mega_steps_10_mini_steps_20_n_power_1 --mega_steps 10 --mini_steps 20 --n_power 1 --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir mega_steps_10_mini_steps_20_n_power_3 --mega_steps 10 --mini_steps 20 --n_power 3 --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir mega_steps_20_mini_steps_10_n_power_1 --mega_steps 20 --mini_steps 10 --n_power 1 --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir mega_steps_20_mini_steps_10_n_power_3 --mega_steps 20 --mini_steps 10 --n_power 3 --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir mega_steps_20_mini_steps_20_n_power_1 --mega_steps 20 --mini_steps 20 --n_power 1 --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir mega_steps_20_mini_steps_20_n_power_3 --mega_steps 20 --mini_steps 20 --n_power 3 --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lr_0.005 --lr 0.005 --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lr_0.01  --lr 0.01  --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lr_0.05  --lr 0.05  --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lr_0.1   --lr 0.1   --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lr_0.005_adam_b1_0.9 --lr 0.005 --adam_b1 0.9 --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lr_0.01_adam_b1_0.9  --lr 0.01  --adam_b1 0.9 --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lr_0.05_adam_b1_0.9  --lr 0.05  --adam_b1 0.9 --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lr_0.1_adam_b1_0.9   --lr 0.1   --adam_b1 0.9 --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir sgd_mom_0_lr_0.005   --opt sgd --mom 0   --lr 0.005 --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir sgd_mom_0.9_lr_0.005 --opt sgd --mom 0.9 --lr 0.005 --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir sgd_mom_0_lr_0.01    --opt sgd --mom 0   --lr 0.01  --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir sgd_mom_0.9_lr_0.01  --opt sgd --mom 0.9 --lr 0.01  --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir sgd_mom_0_lr_0.05    --opt sgd --mom 0   --lr 0.05  --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir sgd_mom_0.9_lr_0.05  --opt sgd --mom 0.9 --lr 0.05  --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir sgd_mom_0_lr_0.1     --opt sgd --mom 0   --lr 0.1   --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir sgd_mom_0.9_lr_0.1   --opt sgd --mom 0.9 --lr 0.1   --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lambda_cent_0.01_lambda_param_0.01_lambda_vat_0.01 --lamba_cent 0.01 --lambda_param 0.01 --lambda_vat 0.01 --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lambda_cent_0.01_lambda_param_0.01_lambda_vat_0.1 --lamba_cent 0.01 --lambda_param 0.01 --lambda_vat 0.1 --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lambda_cent_0.01_lambda_param_0.1_lambda_vat_0.01 --lamba_cent 0.01 --lambda_param 0.1 --lambda_vat 0.01 --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lambda_cent_0.01_lambda_param_0.1_lambda_vat_0.1 --lamba_cent 0.01 --lambda_param 0.1 --lambda_vat 0.1  --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lambda_cent_0.1_lambda_param_0.01_lambda_vat_0.01 --lamba_cent 0.1 --lambda_param 0.01 --lambda_vat 0.01 --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lambda_cent_0.1_lambda_param_0.01_lambda_vat_0.1 --lamba_cent 0.1 --lambda_param 0.01 --lambda_vat 0.1  --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lambda_cent_0.1_lambda_param_0.1_lambda_vat_0.01 --lamba_cent 0.1 --lambda_param 0.1 --lambda_vat 0.01  --debug_size 20, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lambda_cent_0.1_lambda_param_0.1_lambda_vat_0.1 --lamba_cent 0.1 --lambda_param 0.1 --lambda_vat 0.1   --debug_size 20, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lambda_cent_0.01_lambda_param_0.01_lambda_vat_0.01 --lambda_cent 0.01 --lambda_param 0.01 --lambda_vat 0.01 --debug_size 50, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lambda_cent_0.01_lambda_param_0.01_lambda_vat_0.1  --lambda_cent 0.01 --lambda_param 0.01 --lambda_vat 0.1  --debug_size 50, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lambda_cent_0.01_lambda_param_0.1_lambda_vat_0.01  --lambda_cent 0.01 --lambda_param 0.1  --lambda_vat 0.01 --debug_size 50, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lambda_cent_0.01_lambda_param_0.1_lambda_vat_0.1   --lambda_cent 0.01 --lambda_param 0.1  --lambda_vat 0.1  --debug_size 50, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lambda_cent_0.1_lambda_param_0.01_lambda_vat_0.01  --lambda_cent 0.1  --lambda_param 0.01 --lambda_vat 0.01 --debug_size 50, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lambda_cent_0.1_lambda_param_0.01_lambda_vat_0.1   --lambda_cent 0.1  --lambda_param 0.01 --lambda_vat 0.1  --debug_size 50, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lambda_cent_0.1_lambda_param_0.1_lambda_vat_0.01   --lambda_cent 0.1  --lambda_param 0.1  --lambda_vat 0.01 --debug_size 50, 11000]
+  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir lambda_cent_0.1_lambda_param_0.1_lambda_vat_0.1    --lambda_cent 0.1  --lambda_param 0.1  --lambda_vat 0.1  --debug_size 50, 11000]
