change feat regularization default value to 0.0001

--- a/system/commands.yml
+++ b/system/commands.yml
@@ -1,9 +1,9 @@
 commands:
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir dirtt_opt_sgd_mom_0.9_lr_0.05_ema_decay_1_gaussian_std_0         --opt sgd --mom 0.9      --lr 0.05 --ema_decay 1    --gaussian_std 0     --debug_size 200, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir dirtt_opt_sgd_mom_0.9_lr_0.05_ema_decay_1_gaussian_std_0.005     --opt sgd --mom 0.9      --lr 0.05 --ema_decay 1    --gaussian_std 0.005 --debug_size 200, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir dirtt_opt_sgd_mom_0.9_lr_0.05_ema_decay_0.99_gaussian_std_0      --opt sgd --mom 0.9      --lr 0.05 --ema_decay 0.99 --gaussian_std 0     --debug_size 200, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir dirtt_opt_sgd_mom_0.9_lr_0.05_ema_decay_0.99_gaussian_std_0.005  --opt sgd --mom 0.9      --lr 0.05 --ema_decay 0.99 --gaussian_std 0.005 --debug_size 200, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir dirtt_opt_adam_beta_0.9_lr_0.1_ema_decay_1_gaussian_std_0        --opt adam --adam_b1 0.9 --lr 0.1  --ema_decay 1    --gaussian_std 0     --debug_size 200, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir dirtt_opt_adam_beta_0.9_lr_0.1_ema_decay_1_gaussian_std_0.005    --opt adam --adam_b1 0.9 --lr 0.1  --ema_decay 1    --gaussian_std 0.005 --debug_size 200, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir dirtt_opt_adam_beta_0.9_lr_0.1_ema_decay_0.99_gaussian_std_0     --opt adam --adam_b1 0.9 --lr 0.1  --ema_decay 0.99 --gaussian_std 0     --debug_size 200, 11000]
-  - [python active_learning_project/scripts/defend_v5_dirtt.py --dump_dir dirtt_opt_adam_beta_0.9_lr_0.1_ema_decay_0.99_gaussian_std_0.005 --opt adam --adam_b1 0.9 --lr 0.1  --ema_decay 0.99 --gaussian_std 0.005 --debug_size 200, 11000]
+  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --dump_dir pointnet_sgd_mom_0_lr_0.01_std_0          --opt sgd --mom 0     --lr 0.01   --gaussian_std 0.0      , 11000]
+  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --dump_dir pointnet_sgd_mom_0_lr_0.01_std_0.005      --opt sgd --mom 0     --lr 0.01   --gaussian_std 0.005    , 11000]
+  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --dump_dir pointnet_sgd_mom_0_lr_0.001_std_0         --opt sgd --mom 0     --lr 0.001  --gaussian_std 0.0      , 11000]
+  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --dump_dir pointnet_sgd_mom_0_lr_0.001_std_0.005     --opt sgd --mom 0     --lr 0.001  --gaussian_std 0.005    , 11000]
+  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --dump_dir pointnet_sgd_mom_0.9_lr_0.01_std_0        --opt sgd --mom 0.9   --lr 0.01   --gaussian_std 0.0      , 11000]
+  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --dump_dir pointnet_sgd_mom_0.9_lr_0.01_std_0.005    --opt sgd --mom 0.9   --lr 0.01   --gaussian_std 0.005    , 11000]
+  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --dump_dir pointnet_sgd_mom_0.9_lr_0.001_std_0       --opt sgd --mom 0.9   --lr 0.001  --gaussian_std 0.0      , 11000]
+  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --dump_dir pointnet_sgd_mom_0.9_lr_0.001_std_0.005   --opt sgd --mom 0.9   --lr 0.001  --gaussian_std 0.005    , 11000]
