--- a/system/commands.yml
+++ b/system/commands.yml
@@ -1,9 +1,5 @@
 commands:
-  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --num_workers 4 --dump_dir pointnet_tta_50/opt_adam_features_probs_hard_transforms         --opt adam      --features probs                                                 , 11000]
-  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --num_workers 4 --dump_dir pointnet_tta_50/opt_adam_features_probs_soft_transforms         --opt adam      --features probs        --soft_transforms --gaussian_std 0.0025  , 11000]
-  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --num_workers 4 --dump_dir pointnet_tta_50/opt_adam_features_embeddings_hard_transforms    --opt adam      --features embeddings                                            , 11000]
-  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --num_workers 4 --dump_dir pointnet_tta_50/opt_adam_features_embeddins_soft_transforms     --opt adam      --features embeddings   --soft_transforms --gaussian_std 0.0025  , 11000]
-  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --num_workers 4 --dump_dir pointnet_tta_50/opt_rmsprop_features_probs_hard_transforms      --opt rmsprop   --features probs                                                 , 11000]
-  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --num_workers 4 --dump_dir pointnet_tta_50/opt_rmsprop_features_probs_soft_transforms      --opt rmsprop   --features probs        --soft_transforms --gaussian_std 0.0025  , 11000]
-  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --num_workers 4 --dump_dir pointnet_tta_50/opt_rmsprop_features_embeddings_hard_transforms --opt rmsprop   --features embeddings                                            , 11000]
-  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --num_workers 4 --dump_dir pointnet_tta_50/opt_rmsprop_features_embeddinds_soft_transforms --opt rmsprop   --features embeddings   --soft_transforms --gaussian_std 0.0025  , 11000]
+  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --dump_dir defend_v5_adv_ttas/ttas_50perc_radius_0.01_std_0.005  --radius 0.01 --gaussian_std 0.005, 11000]
+  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --dump_dir defend_v5_adv_ttas/ttas_50perc_radius_0.05_std_0.005  --radius 0.05 --gaussian_std 0.005, 11000]
+  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --dump_dir defend_v5_adv_ttas/ttas_50perc_radius_0.1_std_0.005   --radius 0.1  --gaussian_std 0.005, 11000]
+  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --dump_dir defend_v5_adv_ttas/ttas_50perc_radius_1.0_std_0.005   --radius 1.0  --gaussian_std 0.005, 11000]
