--- a/system/commands.yml
+++ b/system/commands.yml
@@ -1,9 +1,13 @@
 commands:
-  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --dump_dir defend_tta_with_pointnet/lr_0.001_lambda_adv_det_100     --lr 0.001    --lambda_adv_det 100, 11000]
-  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --dump_dir defend_tta_with_pointnet/lr_0.001_lambda_adv_det_10      --lr 0.001    --lambda_adv_det 10, 11000]
-  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --dump_dir defend_tta_with_pointnet/lr_0.001_lambda_adv_det_1       --lr 0.001    --lambda_adv_det 1, 11000]
-  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --dump_dir defend_tta_with_pointnet/lr_0.001_lambda_adv_det_0.1     --lr 0.001    --lambda_adv_det 0.1, 11000]
-  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --dump_dir defend_tta_with_pointnet/lr_0.001_lambda_adv_det_0.01    --lr 0.001    --lambda_adv_det 0.01, 11000]
-  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --dump_dir defend_tta_with_pointnet/lr_0.01_lambda_adv_det_100      --lr 0.01     --lambda_adv_det 100, 11000]
-  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --dump_dir defend_tta_with_pointnet/lr_0.01_lambda_adv_det_1        --lr 0.01     --lambda_adv_det 1, 11000]
-  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --dump_dir defend_tta_with_pointnet/lr_0.01_lambda_adv_det_0.01     --lr 0.01     --lambda_adv_det 0.01, 11000]
+  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --num_workers 40 --dump_dir random_forest/rf_logits_std_0.0_soft_transforms        --features logits     --gaussian_std 0.0     --soft_transforms   , 11000]
+  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --num_workers 40 --dump_dir random_forest/rf_logits_std_0.005_hard_transforms      --features logits     --gaussian_std 0.005                       , 11000]
+  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --num_workers 40 --dump_dir random_forest/rf_logits_std_0.005_soft_transforms      --features logits     --gaussian_std 0.005   --soft_transforms   , 11000]
+  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --num_workers 40 --dump_dir random_forest/rf_logits_std_0.0125_hard_transforms     --features logits     --gaussian_std 0.0125                      , 11000]
+  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --num_workers 40 --dump_dir random_forest/rf_logits_std_0.0125_soft_transforms     --features logits     --gaussian_std 0.0125  --soft_transforms   , 11000]
+  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --num_workers 40 --dump_dir random_forest/rf_embeddings_std_0.0_hard_transforms    --features embeddings --gaussian_std 0.0                         , 11000]
+  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --num_workers 40 --dump_dir random_forest/rf_embeddings_std_0.0_soft_transforms    --features embeddings --gaussian_std 0.0     --soft_transforms   , 11000]
+  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --num_workers 40 --dump_dir random_forest/rf_embeddings_std_0.005_hard_transforms  --features embeddings --gaussian_std 0.005                       , 11000]
+  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --num_workers 40 --dump_dir random_forest/rf_embeddings_std_0.005_soft_transforms  --features embeddings --gaussian_std 0.005   --soft_transforms   , 11000]
+  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --num_workers 40 --dump_dir random_forest/rf_embeddings_std_0.0125_hard_transforms --features embeddings --gaussian_std 0.0125                      , 11000]
+  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --num_workers 40 --dump_dir random_forest/rf_embeddings_std_0.0125_soft_transforms --features embeddings --gaussian_std 0.0125  --soft_transforms   , 11000]
+  - [python active_learning_project/scripts/defend_tta_with_pointnet.py --num_workers 40 --dump_dir random_forest/rf_logits_std_0.0_hard_transforms        --features logits     --gaussian_std 0.0                         , 11000]
